Changes for Filter Effects specification
----------------------------------------

2011-08-30  Dean Jackson  <dino@apple.com>

- note that feCustom is probably not going to be included at this stage
- Added filter() <image> function
- Removed x y width height parameters from enable-background
- Added drop-shadow shorthand

2011-07  Erik Dahlström <ed@opera.com>

- Various changes. See hg log for details.

2011-04-18  Dean Jackson  <dino@apple.com>

- renamed files, removing "SVG"
- temporarily commenting out reqs and primer publication
- update the intro section to be more language neutral, and
  generally replace SVG with XML for now.
- define the filter property in terms of a list of function
- describe the functions as a space separated list
  of commands like url(), sepia() etc.
- show the equivalent XML version for each shorthand function